website: Fix i18n loading text not showing up.

--- a/app/website/src/app.css
+++ b/app/website/src/app.css
@@ -21,4 +21,7 @@
 	.drag-none {
 		-webkit-user-drag: none;
 	}
+	.text-pixel {
+		transform: perspective(1px);
+	}
 }
